--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,7 +56,8 @@ dependencies {
     // library for circle image
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 //    implementation 'com.mikhaellopez:circularprogressbar:3.0.3'
-    implementation 'com.github.momodevelopment:androidsdkV2.2:2.3'
+//    implementation 'com.github.momodevelopment:androidsdkV2.2:2.3'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-auth:19.3.2'
